[tool.poetry]
name = "994G601-gan-morphing"
version = "0.1.0"
description = ""
authors = ["wakame-tech <kamata1919@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# torch = { version = "=1.11.0+cu113", source = "pytorch" }
# torchvision = { version = "=0.11.0+cu113", source = "pytorch" }

# [[tool.poetry.source]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu113/"
# secondary = true
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
